2.1.0-beta1 "Rusty Clutch"
==========================

    ADDED: Konfigurator options: Look&Feel > Panel >
           Status/Totalsbar settings > Draw frame / Fill background
    ADDED: Konfigurator option: Colors > Colors > Other > Statusbar
    ADDED: Konfigurator option: Look&Feel > Panel > Panel layout > Quicksearch position
    ADDED: buttons "(un)mount" and "eject" in mountman gui
    ADDED: KMountMan::removable(), KMountMan::networkFilesystem()
    ADDED: file regex in quick search, thanks to GregC
    ADDED: lister: a fast text/hex viewer for Krusader
    ADDED: service menu, thanks to Tomasz Kalkosinski
    ADDED: queued packing / unpacking
    ADDED: lock tabs, close inactive tabs, close duplicated tabs
    ADDED: better trash integration

  CHANGED: mountman gui: retrieve icons from Solid
  CHANGED: mountman gui: change mount check interval from 3000 to 500 ms
  CHANGED: mountman gui: current selection persists refresh of mountlist,
           mountlist is focused after refresh
  CHANGED: dont't execute a process if the correct working dir cannot be set
  CHANGED: dont't retrieve working dir of the cmdline from the label which might get truncated
           - store it in a string instead
  CHANGED: the packer/unpacker/archive tester are job based now
  CHANGED: the old views were replaced by the interviews

    FIXED: mountman: unmounting is not possible if currently opened dir is below the mountpoint
    FIXED: [ 2860400 ] Drag'n'drop to kmail broken
    FIXED: [ 2904850 ] panels are not repainted
    FIXED: deadlock when trying to display error message after failed mount
    FIXED: [ 2858133 ] wrong background color in listviews
    FIXED: [ 2857663 ] deadlock when trying to display error message after failed unmount
    FIXED: problem with autorefresh in the new interviews
    FIXED: [ 2609505 ] problem with directory refresh
    FIXED: [ 2793916 ] KHistoryComboBox content can change the window width