@@ -4,7 +4,8 @@
     ADDED: Konfigurator options: Look&Feel > Panel >
            Status/Totalsbar settings > Draw frame / Fill background
     ADDED: Konfigurator option: Colors > Colors > Other > Statusbar
-    ADDED: Konfigurator option: Look&Feel > Panel > Panel layout > Quicksearch position
+    ADDED: Konfigurator option: Look&Feel > Panel > Panel layout >
+           Quicksearch position / Tab Bar position
     ADDED: buttons "(un)mount" and "eject" in mountman gui
     ADDED: KMountMan::removable(), KMountMan::networkFilesystem()
     ADDED: file regex in quick search, thanks to GregC
